--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
         </a>
         <nav class="header-nav">
           <ul class="header-list list ">
-            <li class="header-list__item"><a href="" class="header-list__link link">Студия</a></li>
+            <li class="header-list__item"><a href="./index.html" class="header-list__link link">Студия</a></li>
             <li class="header-list__potfolio">
               <a href="./portfolio.html" class="header-list__link curent link">Портфолио</a>
             </li>
